// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreateClusterPage /> Quota not fetched yet should render 1`] = `
<Fragment>
  <PageTitle
    breadcrumbs={
      <Breadcrumbs
        path={
          Array [
            Object {
              "label": "Clusters",
            },
            Object {
              "label": "Create",
            },
          ]
        }
      />
    }
    title="Create a cluster to get started"
  />
  <PageSection>
    <Spinner
      centered={true}
    />
  </PageSection>
</Fragment>
`;

exports[`<CreateClusterPage /> User with no quota should render 1`] = `
<Fragment>
  <PageTitle
    breadcrumbs={
      <Breadcrumbs
        path={
          Array [
            Object {
              "label": "Clusters",
            },
            Object {
              "label": "Create",
            },
          ]
        }
      />
    }
    title="Create a cluster to get started"
  />
  <PageSection>
    <Card>
      <div
        className="pf-c-content ocm-page ocp-osd-selection"
      >
        <div
          className="flex-container"
        >
          <Link
            className="infra-card pf-c-card create-cluster-card"
            to="/install"
          >
            <CardTitle
              className="create-cluster-header"
            >
              <img
                alt="OpenShift Container Platform"
                className="create-cluster-logo"
                src="test-file-stub"
              />
            </CardTitle>
            <CardBody>
              Create an OCP cluster using the command-line installer. Your cluster will automatically register to the Cluster Manager after installation completes.
            </CardBody>
          </Link>
          <Tooltip
            content="You do not have enough quota for this option. Contact sales to purchase additional quota."
          >
            <Card
              className="infra-card create-cluster-card card-disabled"
            >
              <CardTitle
                className="create-cluster-header"
              >
                <img
                  alt="OpenShift Dedicated"
                  className="create-cluster-logo"
                  src="test-file-stub"
                />
              </CardTitle>
              <CardBody>
                Create a Red Hat-managed cluster (OSD), provisioned on Amazon Web Services or Google Cloud Platform.
              </CardBody>
            </Card>
          </Tooltip>
        </div>
      </div>
    </Card>
  </PageSection>
</Fragment>
`;

exports[`<CreateClusterPage /> renders correctly 1`] = `
<Fragment>
  <PageTitle
    breadcrumbs={
      <Breadcrumbs
        path={
          Array [
            Object {
              "label": "Clusters",
            },
            Object {
              "label": "Create",
            },
          ]
        }
      />
    }
    title="Create a cluster to get started"
  />
  <PageSection>
    <Card>
      <div
        className="pf-c-content ocm-page ocp-osd-selection"
      >
        <div
          className="flex-container"
        >
          <Link
            className="infra-card pf-c-card create-cluster-card"
            to="/install"
          >
            <CardTitle
              className="create-cluster-header"
            >
              <img
                alt="OpenShift Container Platform"
                className="create-cluster-logo"
                src="test-file-stub"
              />
            </CardTitle>
            <CardBody>
              Create an OCP cluster using the command-line installer. Your cluster will automatically register to the Cluster Manager after installation completes.
            </CardBody>
          </Link>
          <Link
            className="infra-card pf-c-card create-cluster-card"
            to="/create/osd"
          >
            <CardTitle
              className="create-cluster-header"
            >
              <img
                alt="OpenShift Dedicated"
                className="create-cluster-logo"
                src="test-file-stub"
              />
            </CardTitle>
            <CardBody>
              Create a Red Hat-managed cluster (OSD), provisioned on Amazon Web Services or Google Cloud Platform.
            </CardBody>
          </Link>
        </div>
      </div>
    </Card>
  </PageSection>
</Fragment>
`;
